--- a/app/templates/addEvent.html
+++ b/app/templates/addEvent.html
@@ -257,7 +257,7 @@
                 <option value="Generative">Generative</option>
             </select>
 
-            <label>
+            <label style="display: none;">
               <input type="checkbox" id="attendance"> Would you like to verify attendance for this event?
             </label>
 
